FIX - align text panel home hero

--- a/inc/scss/_module.scss
+++ b/inc/scss/_module.scss
@@ -42,6 +42,7 @@
 			justify-content: center;
 			align-items: center;
 			overflow: hidden;
+			text-align: left;
 	        
 	        h3 {
 	            position: relative;
